// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`buildAuditPrompt snapshot: architect 1`] = `
"You are the Architect. Audit the architecture of the branch's result: apply improve-codebase-architecture — hunt structural weaknesses, missing abstractions, coupling, and opportunities for deepening the design.

This is a read-only audit. NEVER edit files. NEVER run git commands (commit, branch, reset, stash). Your ONLY output is Findings, emitted in your response as fenced \`finding\` blocks in this exact format:

\`\`\`finding
Title: <one line>
Verification: <executable command, or empty if none applies>

<description in prose>

## Acceptance criteria

- <criterion>
\`\`\`

Each Finding must be self-contained and carry a proposed executable Verification command when one is possible (leave Verification empty otherwise).

# PRD

# PRD: Toy feature

Goal: exercise the audit prompt.

# Branch diff

diff --git a/src/a.ts b/src/a.ts
+export const a = 1;
"
`;

exports[`buildAuditPrompt snapshot: security_auditor 1`] = `
"You are the Security Auditor. Hunt vulnerabilities in the branch's result: auth bypass, IDOR, XSS, leaked secrets, unvalidated input.

This is a read-only audit. NEVER edit files. NEVER run git commands (commit, branch, reset, stash). Your ONLY output is Findings, emitted in your response as fenced \`finding\` blocks in this exact format:

\`\`\`finding
Title: <one line>
Verification: <executable command, or empty if none applies>

<description in prose>

## Acceptance criteria

- <criterion>
\`\`\`

Each Finding must be self-contained and carry a proposed executable Verification command when one is possible (leave Verification empty otherwise).

# PRD

# PRD: Toy feature

Goal: exercise the audit prompt.

# Branch diff

diff --git a/src/a.ts b/src/a.ts
+export const a = 1;
"
`;

exports[`existing prompts unchanged buildPrompt snapshot unchanged 1`] = `
"You are the Executor. Your job is ONLY this issue. Do not modify tests. Run \`bun test tests/health.test.ts\` yourself before finishing. NEVER run git commands (commit, branch, reset, stash): capataz verifies and commits your work itself; a commit made by you breaks the run.

# Issue: 03 — Add the /health endpoint

Add a GET /health endpoint returning 200 with body \`ok\`.

## Acceptance criteria

- Returns 200.

## Done so far this run

- 01 — Scaffold server: src/server.ts (+40/-0), package.json (+5/-1)

## Previous failed attempts

### Attempt 1 failed. Verification output (tail):

boom"
`;

exports[`existing prompts unchanged buildFixerPrompt snapshot unchanged 1`] = `
"You are a Fixer. A previous model attempted this issue and failed; its partial work is already in the working tree. Your job is to repair that work — not reimplement from scratch — until the Verification command passes. Work ONLY on this issue. Never modify or delete the armed test files. Run \`bun test tests/health.test.ts\` yourself before finishing. NEVER run git commands (commit, branch, reset, stash): capataz verifies and commits your work itself; a commit made by you breaks the run.

# Issue: 03 — Add the /health endpoint

Add a GET /health endpoint returning 200 with body \`ok\`.

## Acceptance criteria

- Returns 200.

## Done so far this run

- 01 — Scaffold server: src/server.ts (+40/-0), package.json (+5/-1)

## Previous failed attempts

### Attempt 1 failed. Verification output (tail):

boom"
`;
